# matrix

./: .gitignore  CMakeLists.txt  Makefile
include/: Dimension.h  Matrix.h  ThreadPool.h  Utility.h
src/: Matrix.cpp  MatrixDeterminant.cpp  test.cpp
